# hoggan-stop95

./: CMakeLists.txt  README.md
src/: BASIS.f  CPUTIM.f  INTGRL.f  NDXSTR.f  ONELEC.f  OUT.f  SBASE.f  SCFCLO.f  STOP95.f  STPOUT.f  TOELEC.f  YGAUNT.f  dglgq.f  dglnq.f
src/coultwo/: GEGEN3.f  GUSED.f  REAL02.f  RTCCI.f  TCCI.f  TCCINS.f  TCCIS.f
src/exch2/: DUMMY2.f  EXCH2.f  EXCH21.f  FUN05.f  FUN06.f  GEGEN5.f  RADP.f  TCCDP.f
src/exch3/: DUMMY3.f  EXCH3.f  EXCH31.f  FUN07.f  FUN08.f  GEGEN6.f  RADP1.f  REAL04.f  REAL06.f  TCCDP2.f  TIZIRI.f
src/hybrid/: GEGEN2.f  HYBR.f  HYBRD.f  HYBRID.f  REAL03.f  RHYB.f  SYMM03.f
src/kinetic/: DUMBID.f  EKINE1.f  EKINE2.f  KINE12.f  OVLBID.f
src/lib95/: ABIN03.f  ACCEL.f  BA01.f  BAD01.f  BAO1.f  BESSI.f  BESSK.f  BLKDT1.f  BLKDT2.f  BLKDT3.f  BLKDT4.f  CARTCO.f  CARTES.f  CM2REA.f  CMBINT.f  CMINT0.f  CMINT1.f  CMINT2.f  CMINT3.f  CMINT4.f  COEFFS.f  CONST.INCL  DUMMY.f  EPS94.f  FUSED.f  FUSED0.f  GAUNT.f  GLROOT.f  HERMITE.f  ISBOOL.f  OCCDP.f  OCCDP1.f  OCCDP2.f  RAZ.f  SCONST.f  SIZE.INCL  SPHRM.f  YLMV.f
src/monocent/: OCOEI.f  OCOEIS.f  OCTEI.f  OCTEIS.f  REAL01.f
src/overlp/: DUMMY0.f  GEGEN0.f  OCOVL.f  OCOVLS.f  OVELP1.f  OVERLP.f  ROVELP.f
src/scf/: CHDENS.f  DENSM.f  ECORE.f  ENUC.f  FOCKER.f  MATOUT.f  PREJAC.f  SAVEM.f  SCFCLO.f  TEENER.f  VECTOUT.f  eign.f  jacobi.f
src/tetra/: BESPRO.f  DUMMY4.f  DUMMY5.f  FCINTS.f  FSTOIN.f  FUN09.f  FUN10.f  GEG.f  GEGDER.f  GEGEN9.f  HUSES1.f  HUSES2.f  OUADHIAS.f  RADFC.f  REAL07.f  STOPAT.f  TCCDP5.f  TCCDP6.f  TETRA.f  TETRAC.f  YLMV2.f
src/tri31/: GEGEN1.f  RTCNAI.f  TRI31.f  TRIMON.f
src/tri32/: GEGEN4.f  HUSED.f  REAL05.f  RTCTEI.f  SYMM05.f  TCTEI.f  TCTEIS.f  TRI32.f
src/twocent/: GEGEN8.f  RTCOEI.f  TCOEI.f  TCOEI2.f  TCOEIY.f  TCOEIZ.f
